# inf2d

./: .gitignore  BACKLOG.md  BIOMES_PLAN.md  CLAUDE.md  Cargo.toml  README.md  REWORK.md  run.cmd
.cargo/: config.toml
assets/foliage/vox/Bushes/: bush_1.vox  bush_2.vox  bush_3.vox  bush_4.vox
assets/foliage/vox/Corn/: corn_full.vox  corn_sprout.vox
assets/foliage/vox/Flowers/: flower_purple.vox  flower_yellow.vox
assets/foliage/vox/Rocks/: rock_1.vox  rock_2.vox  rock_3.vox
assets/foliage/vox/Trees/: tree_XL.vox  tree_large.vox  tree_small.vox  tree_stump.vox
crates/inf2d_app/: Cargo.toml
crates/inf2d_app/src/: main.rs
crates/inf2d_audio/: Cargo.toml
crates/inf2d_audio/src/: lib.rs
crates/inf2d_camera/: Cargo.toml
crates/inf2d_camera/src/: lib.rs  pan.rs  picking.rs  rig.rs  shake.rs  zoom.rs
crates/inf2d_core/: Cargo.toml  README.md
crates/inf2d_core/src/: coords.rs  iso.rs  lib.rs  rng.rs  sets.rs  states.rs
crates/inf2d_debug/: Cargo.toml
crates/inf2d_debug/src/: gizmos.rs  inspector.rs  lib.rs
crates/inf2d_gameplay/: Cargo.toml
crates/inf2d_gameplay/src/: lib.rs  mobs.rs  replan.rs  stats.rs
crates/inf2d_input/: Cargo.toml
crates/inf2d_input/src/: lib.rs
crates/inf2d_pathfinding/: Cargo.toml
crates/inf2d_pathfinding/src/: lib.rs
crates/inf2d_physics/: Cargo.toml
crates/inf2d_physics/src/: layers.rs  lib.rs  tile_colliders.rs
crates/inf2d_physics/tests/: greedy_meshing.rs
crates/inf2d_render/: Cargo.toml
crates/inf2d_render/src/: atlas.rs  chunk_cliff.wgsl  cliffs.rs  daynight.rs  hlod.rs  hover.rs  layers.rs  lib.rs  light.wgsl  lights.rs  lit_tile.wgsl  lit_tile_material.rs  lit_tile_vertex.wgsl  particles.rs  picking.rs  shadows.rs  sprite_stack.rs  tilemap.rs  water.rs  water.wgsl
crates/inf2d_render/src/postfx/: godrays.rs  godrays.wgsl  heat.rs  heat.wgsl  lut.rs  lut.wgsl  lut_post.rs  lut_post.wgsl  mod.rs  vignette.rs  vignette.wgsl
crates/inf2d_save/: Cargo.toml
crates/inf2d_save/src/: lib.rs
crates/inf2d_ui/: Cargo.toml
crates/inf2d_ui/src/: hud.rs  lib.rs  loading.rs  pause_menu.rs
crates/inf2d_world/: Cargo.toml
crates/inf2d_world/src/: chunk.rs  events.rs  generator.rs  lib.rs  manager.rs  props.rs  streaming.rs  tile.rs
crates/inf2d_worldgen/: Cargo.toml
crates/inf2d_worldgen/src/: biome.rs  lib.rs  params.rs
crates/inf3d_app/: Cargo.toml
crates/inf3d_app/assets/audio/: README.md
crates/inf3d_app/assets/audio/ambient/: .gitkeep
crates/inf3d_app/assets/audio/music/: .gitkeep
crates/inf3d_app/assets/audio/sfx/footsteps/: .gitkeep
crates/inf3d_app/assets/audio/sfx/player/: .gitkeep
crates/inf3d_app/assets/audio/sfx/ui/: .gitkeep
crates/inf3d_app/assets/audio/sfx/world/: .gitkeep
crates/inf3d_app/assets/config/: quality.ron
crates/inf3d_app/assets/foliage/vox/Corn/: corn_medium.vox  corn_small.vox
crates/inf3d_app/assets/foliage/vox/Flowers/: flower_blue.vox  flower_red.vox
crates/inf3d_app/assets/foliage/vox/Grass/: blooming_yellow.vox  blooming_yellow_and_blue.vox
crates/inf3d_app/assets/foliage/vox/Rocks/: rock_4.vox
crates/inf3d_app/assets/foliage/vox/Trees/: cactus.vox  cactus_small.vox  palm.vox  palm_small.vox  pine_large.vox  pine_small.vox  tree_medium.vox
crates/inf3d_app/src/: main.rs
crates/inf3d_audio/: Cargo.toml
crates/inf3d_audio/src/: lib.rs
crates/inf3d_camera/: Cargo.toml
crates/inf3d_camera/src/: lib.rs
crates/inf3d_city/: Cargo.toml
crates/inf3d_city/src/: lib.rs
crates/inf3d_core/: Cargo.toml
crates/inf3d_core/src/: lib.rs
crates/inf3d_editor/: Cargo.toml  README.md
crates/inf3d_editor/src/: camera.rs  main.rs  paint.rs  palette.rs  parts.rs  render.rs  state.rs  volume.rs
crates/inf3d_editor/src/io/: mod.rs  rig.rs  vox_writer.rs
crates/inf3d_editor/src/ui/: mod.rs  panels.rs
crates/inf3d_gameplay/: Cargo.toml
crates/inf3d_gameplay/src/: character.rs  lib.rs
crates/inf3d_menu/: Cargo.toml
crates/inf3d_menu/src/: lib.rs  save.rs  testmap.rs  theme.rs
crates/inf3d_monitor/: Cargo.toml
crates/inf3d_monitor/src/: lib.rs
crates/inf3d_pathfinding/: Cargo.toml
crates/inf3d_pathfinding/src/: lib.rs
crates/inf3d_physics/: Cargo.toml
crates/inf3d_physics/src/: lib.rs
crates/inf3d_proto/: Cargo.toml
crates/inf3d_proto/assets/models/grass/: README.txt
crates/inf3d_proto/src/: camera.rs  dust.rs  fog.rs  grass.rs  highlight.rs  hud.rs  main.rs  pathfind.rs  player.rs  water.rs  world.rs
crates/inf3d_render/: Cargo.toml
crates/inf3d_render/src/: cursor.rs  dust.rs  edit.rs  fog.rs  foliage.rs  grass.rs  grass.wgsl  highlight.rs  lib.rs  water.rs  xray.rs
crates/inf3d_render/src/foliage/: mod.rs  scatter.rs  spawn.rs  stream.rs  vox_mesh.rs
crates/inf3d_ui/: Cargo.toml
crates/inf3d_ui/src/: lib.rs
crates/inf3d_world/: Cargo.toml
crates/inf3d_world/src/: lib.rs  terrain_material.rs  terrain_material.wgsl  terrain_prepass.wgsl  terrain_xray.wgsl
crates/inf3d_worldgen/: Cargo.toml
crates/inf3d_worldgen/src/: lib.rs
