[workspace]
resolver = "2"
members = [
    "crates/inf3d_core",
    "crates/inf3d_worldgen",
    "crates/inf3d_world",
    "crates/inf3d_camera",
    "crates/inf3d_physics",
    "crates/inf3d_render",
    "crates/inf3d_gameplay",
    "crates/inf3d_pathfinding",
    "crates/inf3d_ui",
    "crates/inf3d_monitor",
    "crates/inf3d_audio",
    "crates/inf3d_app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["inf3d"]
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/inf3d"
rust-version = "1.85"

[workspace.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_camera",
    "bevy_gltf",
    "bevy_scene",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_post_process",
    "bevy_image",
    "bevy_input_focus",
    "bevy_log",
    "bevy_mesh",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_shader",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "multi_threaded",
    "mp3",
    "png",
    "tonemapping_luts",
    "vorbis",
    "x11",
    "zstd_rust",
] }
bevy_voxel_world = "0.16"
# ECS-native physics for Bevy. avian3d 0.6.1 targets bevy ^0.18 (verified
# against its Cargo.toml). Default features include `3d`, `f32`, `parry-f32`,
# `collider-from-mesh` (TrimeshFromMesh constructor) and the
# `character_controller` module (MoveAndSlide). We disable `debug-plugin` and
# `diagnostic_ui` to keep the build lean; everything we use is still on.
avian3d = { version = "0.6.1", default-features = false, features = [
    "3d",
    "f32",
    "parry-f32",
    "collider-from-mesh",
    "parallel",
    "bevy_scene",
] }
# Native (drop the default `webgl2` limiter). `depth_prepass` enables the nicer
# deep/shallow color blend + waves + reflections. No `ssr` (it broke rendering on
# our prepass-less voxel terrain).
bevy_water = { version = "0.18", default-features = false, features = [
    "embed_shaders",
    "depth_prepass",
    "image_utils",
] }
noise = "0.9"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }

inf3d_core = { path = "crates/inf3d_core" }
inf3d_worldgen = { path = "crates/inf3d_worldgen" }
inf3d_world = { path = "crates/inf3d_world" }
inf3d_camera = { path = "crates/inf3d_camera" }
inf3d_physics = { path = "crates/inf3d_physics" }
inf3d_render = { path = "crates/inf3d_render" }
inf3d_gameplay = { path = "crates/inf3d_gameplay" }
inf3d_pathfinding = { path = "crates/inf3d_pathfinding" }
inf3d_ui = { path = "crates/inf3d_ui" }
inf3d_monitor = { path = "crates/inf3d_monitor" }
inf3d_audio = { path = "crates/inf3d_audio" }

[profile.dev]
opt-level = 1
# Split debug info out of the .exe so the binary stays under Windows's 2 GB PE limit.
# Without this the debug binary overflows ~2.1 GB and Windows refuses to launch it.
split-debuginfo = "packed"
strip = "debuginfo"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
strip = "debuginfo"

# Local fork of bevy_voxel_world 0.16.0 (vendored under vendor/) adding an
# optional `chunk_y_bounds()` config hook so the streamed chunk region can be
# clamped to a shallow vertical slab instead of a full 3D sphere — the iso view
# is shallow and the stock sphere spawned ~2100 chunk entities, ~87% empty air
# above/below the thin terrain. The patch is additive (default `None` = stock
# behavior); see vendor/bevy_voxel_world for the diff. Keep the version matching
# the crates.io requirement (`bevy_voxel_world = "0.16"`).
[patch.crates-io]
bevy_voxel_world = { path = "vendor/bevy_voxel_world" }
