[package]
name = "inf2d_app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "inf2d binary — composes the plugin graph and owns main()."

[[bin]]
name = "inf2d"
path = "src/main.rs"

[features]
default = ["dev"]
dev = []
release = []

[dependencies]
bevy = { workspace = true }
bevy_tweening = { workspace = true }
inf2d_core = { workspace = true }
inf2d_world = { workspace = true }
inf2d_worldgen = { workspace = true }
inf2d_render = { workspace = true }
inf2d_physics = { workspace = true }
inf2d_camera = { workspace = true }
inf2d_input = { workspace = true }
inf2d_pathfinding = { workspace = true }
inf2d_gameplay = { workspace = true }
inf2d_audio = { workspace = true }
inf2d_save = { workspace = true }
inf2d_ui = { workspace = true }
inf2d_debug = { workspace = true }
tracing = { workspace = true }
