[package]
name = "inf2d_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared coordinate, math, RNG, state, and system-set primitives for inf2d."

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
rand_xoshiro = { workspace = true }
