[package]
name = "inf2d_debug"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Debug overlays: inspector, chunk gizmos."

[dependencies]
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
inf2d_core = { workspace = true }
inf2d_world = { workspace = true }
inf2d_input = { workspace = true }
