[package]
name = "inf2d_input"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Input action mapping for inf2d — Bevy-native input adapter."

[dependencies]
bevy = { workspace = true }
inf2d_core = { workspace = true }
