[package]
name = "inf2d_pathfinding"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "A* pathfinding over the inf2d chunked tile grid."

[dependencies]
bevy = { workspace = true }
inf2d_core = { workspace = true }
inf2d_world = { workspace = true }
