[package]
name = "inf2d_physics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Avian2D physics integration: per-chunk compound colliders from tile data."

[dependencies]
bevy = { workspace = true }
avian2d = { workspace = true }
inf2d_core = { workspace = true }
inf2d_world = { workspace = true }
tracing = { workspace = true }
