[package]
name = "inf2d_save"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Persistence: save/load world seed, camera, player state."

[dependencies]
bevy = { workspace = true }
inf2d_core = { workspace = true }
inf2d_camera = { workspace = true }
inf2d_world = { workspace = true }
inf2d_worldgen = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
