[package]
name = "inf2d_ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "egui-based HUD overlay for inf2d."

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
inf2d_core = { workspace = true }
inf2d_world = { workspace = true }
inf2d_camera = { workspace = true }
inf2d_render = { workspace = true }
inf2d_gameplay = { workspace = true }
inf2d_audio = { workspace = true }
inf2d_input = { workspace = true }
