[package]
name = "inf2d_world"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Chunked tile-world model, streaming, and Generator trait used by the inf2d crates."

[dependencies]
bevy = { workspace = true }
inf2d_core = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
