[package]
name = "inf3d_app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "inf3d"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true }
avian3d = { workspace = true }
inf3d_core = { workspace = true }
inf3d_physics = { workspace = true }
inf3d_worldgen = { workspace = true }
inf3d_world = { workspace = true }
inf3d_camera = { workspace = true }
inf3d_render = { workspace = true }
inf3d_gameplay = { workspace = true }
inf3d_pathfinding = { workspace = true }
inf3d_ui = { workspace = true }
inf3d_audio = { workspace = true }
# Optional: the telemetry recorder is a DEV/profiling tool (it writes
# `inf3d-monitor.log` each run). Gated behind the `telemetry` feature so a
# shipping build (`--no-default-features`) excludes it entirely. On by default
# for developers.
inf3d_monitor = { workspace = true, optional = true }

[features]
default = ["telemetry"]
telemetry = ["dep:inf3d_monitor"]
