[package]
name = "inf3d_audio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bevy = { workspace = true }
rand = { workspace = true }
inf3d_core = { workspace = true }
inf3d_gameplay = { workspace = true }
inf3d_render = { workspace = true }
