[package]
name = "inf3d_camera"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_voxel_world = { workspace = true }
# Used only for the read-only `SpatialQuery` (boom collision casts against prop
# colliders). The camera is UPSTREAM of `inf3d_physics` in the crate graph, so it
# talks to avian directly and filters props by excluding the player entity rather
# than by `inf3d_physics::GameLayer` (which would create a dependency cycle).
avian3d = { workspace = true }
inf3d_core = { workspace = true }
inf3d_world = { workspace = true }
