[package]
name = "inf3d_physics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bevy = { workspace = true }
avian3d = { workspace = true }
inf3d_core = { workspace = true }
inf3d_worldgen = { workspace = true }
inf3d_camera = { workspace = true }
