[package]
name = "inf3d_proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "inf3d_proto"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true }
bevy_voxel_world = { workspace = true }
bevy_water = { workspace = true }
noise = { workspace = true }
rand = { workspace = true }
