[package]
name = "inf3d_world"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_voxel_world = { workspace = true }
noise = { workspace = true }
inf3d_core = { workspace = true }
inf3d_worldgen = { workspace = true }
